--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationPropertiesView.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ApplicationPropertiesView.mxml
@@ -4,7 +4,7 @@
 		 xmlns:mx="library://ns.adobe.com/flex/mx"
 		 xmlns:components="net.vdombox.ide.core.view.components" 
 		 width="100%" height="100%" gap="2" xmlns:components1="net.vdombox.ide.core.view.components.*"
-		 paddingBottom="10" paddingRight="10" xmlns:components2="net.vdombox.components.*">
+		 paddingBottom="10" paddingRight="10" xmlns:components2="net.vdombox.components.*" xmlns:button="net.vdombox.ide.common.view.components.button.*">
 	<fx:Script>
 		<![CDATA[
 			import mx.events.FlexEvent;
@@ -82,11 +82,11 @@
 		
 		<s:HGroup width="100%" horizontalAlign="right" >
 			
-			<components2:VDOMButton id="btnCancel"
+			<button:VDOMButton id="btnCancel"
 					  label="{getLocalesWord('create_edit_application_cancel' )}"
 					  click="{dispatchEvent( new ApplicationManagerEvent( ApplicationManagerEvent.CANCEL ) ) }"/>
 
-			<components2:VDOMButton id="btnSave" 
+			<button:VDOMButton id="btnSave" 
 					  label="{getLocalesWord('create_edit_application_save' )}"
 					  click="{dispatchEvent( new ApplicationManagerEvent( ApplicationManagerEvent.SAVE_INFORMATION ) ) }"/>
 			
