--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/AlertWindowSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/AlertWindowSkin.mxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		xmlns:s="library://ns.adobe.com/flex/spark" 
-		xmlns:mx="library://ns.adobe.com/flex/mx" xmlns:components="net.vdombox.components.*">
+		xmlns:mx="library://ns.adobe.com/flex/mx" xmlns:components="net.vdombox.components.*" xmlns:button="net.vdombox.ide.common.view.components.button.*">
 	<!-- host component -->
 	<fx:Metadata>
 		[HostComponent("net.vdombox.ide.core.view.components.AlertWindow")]
@@ -39,7 +39,7 @@
 			
 			<s:HGroup width="100%" height="100%" paddingLeft="15" paddingRight="15" paddingTop="10" paddingBottom="10">
 					
-				<mx:Image source="@Embed('icons/Warning.png')" />
+				<mx:Image source="@Embed('assets/Warning.png')" />
 					
 				<s:TextArea text="{hostComponent.content}"
 							width="100%" height="100%" paddingTop="5"
@@ -53,13 +53,13 @@
 				
 			<s:Rect width="100%" height="100%">
 				<s:fill>
-					<s:BitmapFill source="@Embed('icons/texture_ide_sidebar.png')" />
+					<s:BitmapFill source="@Embed('assets/texture_ide_sidebar.png')" />
 				</s:fill>
 			</s:Rect>
 				
 			<s:HGroup width="100%" height="100%" horizontalAlign="right" verticalAlign="middle" paddingRight="10">
 				
-				<components:VDOMButton label="Close" click="{hostComponent.close()}"/>
+				<button:VDOMButton label="Close" click="{hostComponent.close()}"/>
 				
 			</s:HGroup>
 				
