--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/ApplicationsIconsChoosWindowSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/ApplicationsIconsChoosWindowSkin.mxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		xmlns:s="library://ns.adobe.com/flex/spark" 
-		xmlns:mx="library://ns.adobe.com/flex/mx" xmlns:components="net.vdombox.components.*">
+		xmlns:mx="library://ns.adobe.com/flex/mx" xmlns:components="net.vdombox.components.*" xmlns:button="net.vdombox.ide.common.view.components.button.*">
 	<!-- host component -->
 	<fx:Metadata>
 		[HostComponent("net.vdombox.ide.core.view.components.ApplicationsIconsChoosWindow")]
@@ -99,13 +99,13 @@
 			
 		<s:HGroup width="100%" paddingLeft="13" paddingRight="13" paddingTop="13" paddingBottom="13">
 			
-			<components:VDOMButton id="canselBt"
+			<button:VDOMButton id="canselBt"
 								   label="{getLocalesWord('iconchooser_cancel')}"
 								   click="hostComponent.close()"  />
 			<mx:Spacer width="100%"/>
-			<components:VDOMButton id="addImageBt" width="45"
+			<button:VDOMButton id="addImageBt" width="45"
 								   label="+"  fontWeight="bold"	 />
-			<components:VDOMButton id="selectBt"
+			<button:VDOMButton id="selectBt"
 									label="{getLocalesWord('iconchooser_ok')}"  	
 									click="hostComponent.selectIcon()" />
 		</s:HGroup>
