Move images to assets
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7747 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/PropertiesPanel.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/PropertiesPanel.mxml
@@ -8,10 +8,10 @@
 
 	<fx:Script>
 		<![CDATA[
-			import net.vdombox.ide.common.model.vo.AttributeVO;
-			import net.vdombox.ide.common.model.vo.ObjectVO;
-			import net.vdombox.ide.common.model.vo.PageVO;
-			import net.vdombox.ide.common.model.vo.VdomObjectAttributesVO;
+			import net.vdombox.ide.common.model._vo.AttributeVO;
+			import net.vdombox.ide.common.model._vo.ObjectVO;
+			import net.vdombox.ide.common.model._vo.PageVO;
+			import net.vdombox.ide.common.model._vo.VdomObjectAttributesVO;
 			import net.vdombox.ide.modules.tree.events.PropertiesPanelEvent;
 			import net.vdombox.ide.modules.tree.model.vo.TreeElementVO;
 			import net.vdombox.ide.modules.tree.view.skins.TextAreaShadowedSkin;
