--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/TreeElement.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/TreeElement.mxml
@@ -17,12 +17,12 @@
 			import mx.events.CloseEvent;
 			import mx.events.FlexEvent;
 			
-			import net.vdombox.ide.common.model.vo.ResourceVO;
+			import net.vdombox.ide.common.model._vo.ResourceVO;
 			import net.vdombox.ide.modules.tree.events.TreeElementEvent;
 			import net.vdombox.ide.modules.tree.model.vo.TreeElementVO;
 			import net.vdombox.ide.modules.tree.view.skins.TreeElementSkin;
 			import net.vdombox.ide.common.view.components.windows.Alert;
-			import net.vdombox.ide.common.view.AlertButton;
+			import net.vdombox.ide.common.view.components.button.AlertButton;
 			
 			import spark.components.Group;
 			import spark.filters.DropShadowFilter;
