--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/skins/TreeElementSkin.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/skins/TreeElementSkin.mxml
@@ -15,7 +15,7 @@
 			import mx.binding.utils.ChangeWatcher;
 			import mx.events.FlexEvent;
 			
-			import net.vdombox.ide.common.model.vo.EventVO;
+			import net.vdombox.ide.common.model._vo.EventVO;
 			import net.vdombox.ide.modules.tree.events.TreeElementEvent;
 			import net.vdombox.ide.modules.tree.model.vo.TreeElementVO;
 			
