--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/LibrariesPanel.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/LibrariesPanel.mxml
@@ -10,7 +10,7 @@
 			import mx.collections.ArrayList;
 			import mx.events.FlexEvent;
 			
-			import net.vdombox.ide.common.model.vo.LibraryVO;
+			import net.vdombox.ide.common.model._vo.LibraryVO;
 			import net.vdombox.ide.modules.scripts.events.LibrariesPanelEvent;
 			import net.vdombox.ide.modules.scripts.events.ListItemRendererEvent;
 			
@@ -121,7 +121,7 @@
 	
 	<s:Rect width="100%" height="100%">
 		<s:fill>
-			<s:BitmapFill source = "@Embed('icons/texture_ide_sidebar.png')" smooth="true" fillMode="repeat"/>
+			<s:BitmapFill source = "@Embed('assets/texture_ide_sidebar.png')" smooth="true" fillMode="repeat"/>
 		</s:fill>
 	</s:Rect>
 
