--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/Toolset.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/Toolset.mxml
@@ -17,7 +17,7 @@
 
 	<components:ToolsetButton id="toolsetButton"
 							  height="100%"
-							  icon="@Embed('icons/scripts_icon.png')"
+							  icon="@Embed('assets/scripts_icon.png')"
 							  label="{ resourceManager.getString( 'Scripts_General', 'toolset_button_label' ) }"
 							  skinClass="net.vdombox.ide.modules.scripts.view.skins.ToolsetButtonSkin" />
 </s:Group>
