--- a/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/resourceBrowser/view/components/Thumbnail.mxml
+++ b/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/resourceBrowser/view/components/Thumbnail.mxml
@@ -13,7 +13,7 @@
 			import mx.utils.ObjectUtil;
 			
 			import net.vdombox.ide.common.events.WorkAreaEvent;
-			import net.vdombox.ide.common.model.vo.ResourceVO;
+			import net.vdombox.ide.common.model._vo.ResourceVO;
 			
 			import spark.filters.DropShadowFilter;
 
