--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/BaseItemRenderer.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/BaseItemRenderer.mxml
@@ -11,7 +11,7 @@
 			import mx.binding.utils.BindingUtils;
 			import mx.events.FlexEvent;
 			
-			import net.vdombox.ide.common.model.vo.EventVO;
+			import net.vdombox.ide.common.model._vo.EventVO;
 			
 			[Bindable]
 			protected var currentIcon : Class;
