--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/EditableParameterRenderer.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/EditableParameterRenderer.mxml
@@ -8,9 +8,9 @@
 		<![CDATA[
 			import mx.core.UIComponent;
 			
-			import net.vdombox.components.StringAttributeEditWindow;
+			import net.vdombox.ide.common.view.components.windows.StringAttributeEditWindow;
 			import net.vdombox.ide.common.events.StringAttributeEditWindowEvent;
-			import net.vdombox.ide.common.model.vo.ActionParameterVO;
+			import net.vdombox.ide.common.model._vo.ActionParameterVO;
 			import net.vdombox.ide.modules.events.events.ElementEvent;
 			import net.vdombox.utils.WindowManager;
 			
