--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/Toolset.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/Toolset.mxml
@@ -17,7 +17,7 @@
 
 	<components:ToolsetButton id="toolsetButton"
 							  height="100%"
-							  icon="@Embed('icons/events_icon.png')"
+							  icon="@Embed('assets/events_icon.png')"
 							  label="{ resourceManager.getString( 'Events_General', 'toolset_button_label' ) }"
 							  skinClass="net.vdombox.ide.modules.events.view.skins.ToolsetButtonSkin" />
 </s:Group>
