--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/ActionElementSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/ActionElementSkin.mxml
@@ -16,8 +16,8 @@
 			import mx.events.FlexEvent;
 			
 			import net.vdombox.ide.common.interfaces.IEventBaseVO;
-			import net.vdombox.ide.common.model.vo.ClientActionVO;
-			import net.vdombox.ide.common.model.vo.ServerActionVO;
+			import net.vdombox.ide.common.model._vo.ClientActionVO;
+			import net.vdombox.ide.common.model._vo.ServerActionVO;
 			import net.vdombox.ide.modules.events.events.ElementEvent;
 
 			private var _data : IEventBaseVO;
