--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/ItemRenderers/BoldSearchItemRenderer.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/ItemRenderers/BoldSearchItemRenderer.mxml
@@ -7,7 +7,7 @@
 		<![CDATA[
 			import mx.controls.dataGridClasses.DataGridListData;
 			
-			import net.vdombox.components.StringAttributeEditWindow;
+			import net.vdombox.ide.common.view.components.windows.StringAttributeEditWindow;
 			import net.vdombox.ide.common.events.StringAttributeEditWindowEvent;
 			import net.vdombox.ide.modules.dataBase.interfaces.ISearchable;
 			import net.vdombox.utils.WindowManager;
