--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/ItemRenderers/LabelItemRenderers.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/ItemRenderers/LabelItemRenderers.mxml
@@ -9,7 +9,7 @@
 			import mx.controls.dataGridClasses.DataGridListData;
 			
 			import net.vdombox.ide.common.events.StringAttributeEditWindowEvent;
-			import net.vdombox.components.StringAttributeEditWindow;
+			import net.vdombox.ide.common.view.components.windows.StringAttributeEditWindow;
 			import net.vdombox.utils.WindowManager;
 			
 			import spark.events.TextOperationEvent;
