--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTablesTree.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTablesTree.mxml
@@ -10,7 +10,7 @@
 			import mx.events.FlexEvent;
 			import mx.events.ListEvent;
 			
-			import net.vdombox.ide.common.model.vo.TypeVO;
+			import net.vdombox.ide.common.model._vo.TypeVO;
 			import net.vdombox.ide.modules.dataBase.events.DataTablesEvents;
 			
 			[Embed(source="assets/disclosureClosedIcon.png")]
@@ -302,7 +302,7 @@
 	<s:VGroup width="100%" height="100%">
 		<mx:Tree id="tablesTree" width="100%" height="100%" doubleClickEnabled="true"
 				 dataProvider="{ _dataBases }" labelField="@name" contentBackgroundAlpha="0"
-				 itemRenderer="net.vdombox.components.ObjectsTreePanelItemRenderer"/>
+				 itemRenderer="net.vdombox.ide.common.view.components.itemrenderers.ObjectsTreePanelItemRenderer"/>
 	</s:VGroup>
 	
 	
