--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/skins/CreateNewObjectWindowSkin.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/skins/CreateNewObjectWindowSkin.mxml
@@ -11,7 +11,7 @@
 		<![CDATA[
 			import mx.events.FlexEvent;
 			
-			import net.vdombox.ide.common.model.vo.TypeVO;
+			import net.vdombox.ide.common.model._vo.TypeVO;
 			
 			import spark.events.IndexChangeEvent;
 			
