--- a/PowerPack/v.01/PowerPack/src/Builder.mxml
+++ b/PowerPack/v.01/PowerPack/src/Builder.mxml
@@ -855,12 +855,20 @@
 				// get local vars            	   
 				var subArr : Array = [];
 				var value : Object ;
+				var fullValue : Object
 				for ( var obj : String in curGraphContext.context )
 				{
-					value   = curGraphContext.context[obj];
+					fullValue   = curGraphContext.context[obj];
 					if ( obj.search( /^__tmp_.*$/ ) < 0 )
-						subArr.push( {	 Name : "$" + obj,
-							Value : value != null ? value.toString() : 'null' } );
+					{
+						if ( fullValue )
+							value = (  fullValue is XML ) ? "[Object XML]" :  fullValue;
+						else
+							value = fullValue = "null"
+					
+						subArr.push( {	 Name : "_$" + obj,
+							Value : value, FullValue : fullValue } );
+					}	
 				}
 
 				// get global vars
@@ -872,10 +880,10 @@
 					{
 						if ( obj.search( /^__tmp_.*$/ ) < 0 )
 						{
+							fullValue  = context[obj];
+							value = (  fullValue is XML ) ? "[Object XML]" :  fullValue;
 							
-							value = (  context[obj] is XML ) ? "[Object XML]" :  context[obj];
-							
-							arr.push( { Name : "$" + obj, Value : value } );
+							arr.push( { Name : "$" + obj, Value : fullValue, FullValue : fullValue } );
 						}
 					}
 				}
