--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/ColumnElement.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/ColumnElement.mxml
@@ -2,30 +2,54 @@
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
 		 xmlns:mx="library://ns.adobe.com/flex/mx"
-		 width="100%">
+		 width="100%" height="25">
 	<fx:Script>
 		<![CDATA[
 			
 			[Bindable]
 			public var columnXML : XML;
 			
+			private var _fon : Boolean = false;
+			
+			
+			
+			public function set fon(value:Boolean):void
+			{
+				_fon = value;
+				if ( _fon )
+					colorRect.color = 0xF7F7F7;
+				else
+					colorRect.color = 0xFFFFFF;
+			}
+
 		]]>
 	</fx:Script>
 	<fx:Declarations>
 		<!-- Place non-visual elements (e.g., services, value objects) here -->
 	</fx:Declarations>
 	
-	<s:HGroup width="100%" height="100%" >
+	
+	<s:Rect width="100%" height="100%">
+		<s:fill>
+			<s:SolidColor id="colorRect" color="#FFFFFF" />
+		</s:fill>
+	</s:Rect>
 		
-		<s:HGroup width="60%" height="100%" gap="0">
-			<mx:Image width="10" height="10"/>
+	<s:HGroup width="100%" height="100%" verticalAlign="middle">
 			
-			<s:TextInput text="{columnXML.@name}" width="100%" editable="false" selectable="false" contentBackgroundAlpha="0" borderVisible="false" />
+		<s:HGroup width="60%" height="100%" gap="0" verticalAlign="middle">
+			<mx:Image width="10" height="10"/>
+				
+			<s:TextInput text="{columnXML.@name}" width="100%" fontSize="13"
+						 editable="false" selectable="false" contentBackgroundAlpha="0" borderVisible="false" />
 		</s:HGroup>
-		
-		<s:TextInput text="{columnXML.@type}" width="40%" editable="false" selectable="false" contentBackgroundAlpha="0" borderVisible="false" />
-		
-		
+			
+		<s:TextInput text="{columnXML.@type}" width="40%" fontSize="13"
+					 editable="false" selectable="false" contentBackgroundAlpha="0" borderVisible="false" />
+			
+			
 	</s:HGroup>
+	
+	
 	
 </s:Group>
