--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/skins/TableElementSkin.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/skins/TableElementSkin.mxml
@@ -14,6 +14,7 @@
 		<![CDATA[
 			import mx.events.FlexEvent;
 			
+			import net.vdombox.ide.common.view.skins.VDOMScrollBarSkin.VDOMVScrollBarSkin;
 			import net.vdombox.ide.modules.dataBase.events.TableElementEvent;
 			
 			import spark.components.Button;
@@ -61,6 +62,11 @@
 				hostComponent.sendGoToTable();
 			}
 			
+			protected function scroller_creationCompleteHandler(event:FlexEvent):void
+			{
+				scroller.verticalScrollBar.setStyle( "skinClass", VDOMVScrollBarSkin );
+			}
+			
 		]]>
 	</fx:Script>
 	
@@ -70,24 +76,42 @@
 		<s:State name="normal" />
 	</s:states>
 	
-	<s:RectangularDropShadow id="dropShadow"
-							 bottom="0" color="#B3B3B3" left="0" right="0"
-							 top="0"
-							 alpha="1" angle="45" blRadius="4" blurX="12"
-							 blurY="12" brRadius="4" distance="0" tlRadius="4"
-							 trRadius="4"/>
-	
-	<s:Rect bottom="0" left="0" right="0" top="0">
+	<s:Rect id="backgraund" bottom="0" left="0" right="0" top="0">
 		<s:fill>
-			<s:SolidColor color="#FFFFFF" />
+			<s:SolidColor color="#505050" />
 		</s:fill>
 	</s:Rect>
 	
-	<s:VGroup width="100%" height="100%" paddingTop="10">
+	<s:RectangularDropShadow id="dropShadow"
+							 bottom="0" color="#505050" left="0" right="0"
+							 top="0"
+							 alpha="0.42" angle="45" blRadius="4" blurX="12"
+							 blurY="12" brRadius="4" distance="0" tlRadius="4"
+							 trRadius="4"/>
+	
+	
+	
+	<s:VGroup width="100%" height="100%" 
+			  left="5" right="5" top="5" bottom="5" gap="0">
+		<s:Group>
+			<s:Rect bottom="0" left="0" right="0" top="0">
+				<s:fill>
+					<s:SolidColor color="#FFFFFF" />
+				</s:fill>
+			</s:Rect>
+			
+			<s:RectangularDropShadow bottom="0" color="#F7F7F7" left="0" right="0"
+									 top="0"
+									 alpha="1" angle="45" blRadius="4" blurX="6"
+									 blurY="6" brRadius="4" distance="0" tlRadius="4"
+									 trRadius="4"/>
+			
+			<s:Label id="nameTable" text="{ hostComponent.objectVO.name }" verticalCenter="0" 
+					 paddingLeft="15" paddingRight="15" paddingTop="5" paddingBottom="5" width="100%" maxWidth="{backgraund.width - 10}"
+					 maxDisplayedLines="1" fontWeight="bold" fontSize="12"
+					 doubleClick="textinput1_doubleClickHandler(event)" doubleClickEnabled="true"/>
+		</s:Group>
 		
-		<s:Label id="nameTable" text="{ hostComponent.objectVO.name }" verticalCenter="0" paddingLeft="10" paddingRight="10" width="100%"
-				maxDisplayedLines="1" fontWeight="bold" fontSize="12"
-				doubleClick="textinput1_doubleClickHandler(event)" doubleClickEnabled="true"/>
 		
 		<s:Group width="100%" height="100%">
 			<s:Rect  bottom="0" left="0" right="0" top="0">
@@ -96,7 +120,13 @@
 				</s:fill>
 			</s:Rect>
 			
-			<components1:VDOMScroller width="100%" height="100%">
+			<s:RectangularDropShadow bottom="0" color="#F7F7F7" left="0" right="0"
+									 top="0"
+									 alpha="1" angle="45" blRadius="4" blurX="6"
+									 blurY="6" brRadius="4" distance="0" tlRadius="4"
+									 trRadius="4"/>
+			
+			<components1:VDOMScroller id="scroller" width="100%" height="100%" creationComplete="scroller_creationCompleteHandler(event)">
 				
 				<s:VGroup id="attributes" width="100%" height="100%" gap="0"/>
 				
@@ -112,7 +142,7 @@
 		
 	</s:VGroup>
 	
-	<mx:Image id="angle" bottom="0" right="0" width="8" height="8"
+	<mx:Image id="angle" bottom="7" right="7" width="8" height="8"
 			  source="@Embed('assets/cornertable.png')" mouseDown="angle_mouseDownHandler(event)" />
 	
 </s:SparkSkin>
