--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/skins/TableElementSkin.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/skins/TableElementSkin.mxml
@@ -85,9 +85,9 @@
 	<s:RectangularDropShadow id="dropShadow"
 							 bottom="0" color="#505050" left="0" right="0"
 							 top="0"
-							 alpha="0.42" angle="45" blRadius="4" blurX="12"
-							 blurY="12" brRadius="4" distance="0" tlRadius="4"
-							 trRadius="4"/>
+							 alpha="0.42" angle="45" blRadius="0" blurX="12"
+							 blurY="12" brRadius="0" distance="0" tlRadius="0"
+							 trRadius="0"/>
 	
 	
 	
@@ -100,11 +100,11 @@
 				</s:fill>
 			</s:Rect>
 			
-			<s:RectangularDropShadow bottom="0" color="#F7F7F7" left="0" right="0"
+			<s:RectangularDropShadow bottom="0" color="#000000" left="0" right="0"
 									 top="0"
-									 alpha="1" angle="45" blRadius="4" blurX="6"
-									 blurY="6" brRadius="4" distance="0" tlRadius="4"
-									 trRadius="4"/>
+									 alpha="1" angle="45" blRadius="0" blurX="6"
+									 blurY="6" brRadius="0" distance="0" tlRadius="0"
+									 trRadius="0"/>
 			
 			<s:Label id="nameTable" text="{ hostComponent.objectVO.name }" verticalCenter="0" 
 					 paddingLeft="15" paddingRight="15" paddingTop="5" paddingBottom="5" width="100%" maxWidth="{backgraund.width - 10}"
@@ -120,11 +120,11 @@
 				</s:fill>
 			</s:Rect>
 			
-			<s:RectangularDropShadow bottom="0" color="#F7F7F7" left="0" right="0"
+			<s:RectangularDropShadow bottom="0" color="#000000" left="0" right="0"
 									 top="0"
-									 alpha="1" angle="45" blRadius="4" blurX="6"
-									 blurY="6" brRadius="4" distance="0" tlRadius="4"
-									 trRadius="4"/>
+									 alpha="1" angle="45" blRadius="0" blurX="6"
+									 blurY="6" brRadius="0" distance="0" tlRadius="0"
+									 trRadius="0"/>
 			
 			<components1:VDOMScroller id="scroller" width="100%" height="100%" creationComplete="scroller_creationCompleteHandler(event)">
 				
