move SettingsProxy in ide_lib
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7791 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/Events.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/Events.mxml
@@ -7,7 +7,7 @@
 	
 	<fx:Script>
 		<![CDATA[ 
-			
+			import net.vdombox.ide.common.model.SettingsProxy;
 			import net.vdombox.ide.modules.events.ApplicationFacade;
 
 			public static const MODULE_ID : String = "net.vdombox.ide.modules.Events";
@@ -88,7 +88,7 @@
 
 			override public function initializeSettings() : void
 			{
-				facade.sendNotification( ApplicationFacade.INITIALIZE_SETTINGS );
+				facade.sendNotification( SettingsProxy.INITIALIZE_SETTINGS );
 			}
 		]]>
 	</fx:Script>
