move SettingsProxy in ide_lib
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7794 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/ResourceBrowser.mxml
+++ b/IDE/v.02/modules/ResourceBrowser/src/net/vdombox/ide/modules/ResourceBrowser.mxml
@@ -13,17 +13,9 @@
 	
 	<fx:Script>
 		<![CDATA[
-//			${DOCUMENTS}\VdomIDE\src\modules\ResourceBrowser
-//
-//			-locale en_US fr_FR ru_RU 
-//			-source-path+=../locale/{locale}
-//			-load-externs=../../VdomIDE/bin-debug/report.xml
-//			
-//			C:\Program Files\Adobe\Adobe Flash Builder 4.5\sdks\4.1.0\frameworks\libs\air
-
-			
 			import mx.skins.spark.ButtonSkin;
 			
+			import net.vdombox.ide.common.model.SettingsProxy;
 			import net.vdombox.ide.modules.resourceBrowser.ApplicationFacade;
 			
 			import org.puremvc.as3.multicore.patterns.facade.Facade;
@@ -100,7 +92,7 @@
 			}
 			override public function initializeSettings() : void
 			{
-				facade.sendNotification( ApplicationFacade.INITIALIZE_SETTINGS );
+				facade.sendNotification( SettingsProxy.INITIALIZE_SETTINGS );
 			}
 		]]>
 	</fx:Script>
