move SettingsProxy in ide_lib
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7795 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/Scripts.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/Scripts.mxml
@@ -11,6 +11,7 @@
 
 	<fx:Script>
 		<![CDATA[
+			import net.vdombox.ide.common.model.SettingsProxy;
 			import net.vdombox.ide.modules.scripts.ApplicationFacade;
 
 			public static const MODULE_ID : String = "net.vdombox.ide.modules.Scripts";
@@ -85,7 +86,7 @@
 
 			override public function initializeSettings() : void
 			{
-				facade.sendNotification( ApplicationFacade.INITIALIZE_SETTINGS );
+				facade.sendNotification( SettingsProxy.INITIALIZE_SETTINGS );
 			}
 		]]>
 	</fx:Script>
