--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/Wysiwyg.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/Wysiwyg.mxml
@@ -66,6 +66,7 @@
 		<![CDATA[
 			import mx.skins.spark.ButtonSkin;
 			
+			import net.vdombox.ide.common.model.SettingsProxy;
 			import net.vdombox.ide.modules.wysiwyg.ApplicationFacade;
 			
 			import org.puremvc.as3.multicore.patterns.facade.Facade;
@@ -142,7 +143,7 @@
 			}
 			override public function initializeSettings() : void
 			{
-				facade.sendNotification( ApplicationFacade.INITIALIZE_SETTINGS );
+				facade.sendNotification( SettingsProxy.INITIALIZE_SETTINGS );
 			}
 		]]>
 	</fx:Script>
