--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/EditableParameterRenderer.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/EditableParameterRenderer.mxml
@@ -8,17 +8,19 @@
 		<![CDATA[
 			import mx.core.UIComponent;
 			
-			import net.vdombox.ide.common.view.components.windows.StringAttributeEditWindow;
 			import net.vdombox.ide.common.events.StringAttributeEditWindowEvent;
 			import net.vdombox.ide.common.model._vo.ActionParameterVO;
+			import net.vdombox.ide.common.view.components.windows.StringAttributeEditWindow;
 			import net.vdombox.ide.modules.events.events.ElementEvent;
 			import net.vdombox.utils.WindowManager;
 			
 			import spark.events.TextOperationEvent;
 
-			[Bindable]
 			private var _data : ActionParameterVO;
-
+			
+			private var text : String;
+			
+			[Bindable]
 			public function get data() : ActionParameterVO
 			{
 				return _data;
@@ -27,6 +29,7 @@
 			public function set data( value : ActionParameterVO ) : void
 			{
 				_data = value
+				text = value.value;
 			}
 			
 			protected function textinput1_doubleClickHandler(event:MouseEvent):void
@@ -51,12 +54,23 @@
 					WindowManager.getInstance().removeWindow( stringAttributeEditWindow );
 				}
 			}
-
 			
-			protected function actionText_changeHandler(event:TextOperationEvent):void
+			protected function actionText_focusOutHandler(event:FocusEvent):void
 			{
-				// TODO Auto-generated method stub
-				dispatchEvent( new ElementEvent ( ElementEvent.PARAMETER_EDIT ) );
+				if ( text != actionText.text )
+				{
+					text = actionText.text;
+					dispatchEvent( new ElementEvent ( ElementEvent.PARAMETER_EDIT ) );
+				}
+			}
+			
+			protected function actionText_keyDownHandler(event:KeyboardEvent):void
+			{
+				if (event.keyCode == Keyboard.ENTER && text != actionText.text )
+				{
+					text = actionText.text;
+					dispatchEvent( new ElementEvent ( ElementEvent.PARAMETER_EDIT ) );
+				}
 			}
 			
 		]]>
@@ -82,10 +96,11 @@
 
 		<mx:Image height="16" source="@Embed('assets/parameter.png')" width="16" alpha="0.3"/>
 		<mx:Spacer width="9"/>
-		<s:Label text="{ _data.name }"/>
+		<s:Label text="{ data.name }"/>
 		<mx:Spacer width="4"/>
-		<s:TextInput id="actionText" minWidth="0" text="@{ _data.value }" width="100%"
-					 focusAlpha="0" doubleClick="textinput1_doubleClickHandler(event)" change="actionText_changeHandler(event)"/>
+		<s:TextInput id="actionText" minWidth="0" text="@{ data.value }" width="100%"
+					 focusAlpha="0" doubleClick="textinput1_doubleClickHandler(event)" focusOut="actionText_focusOutHandler(event)"
+					 keyDown="actionText_keyDownHandler(event)"/>
 	</s:HGroup>
 
 	<s:Line xFrom="24" xTo="24" yFrom="0" yTo="20">
