Undo / Redu and ask save events added
git-svn-id: http://svn.vdombox.ru/flextools/trunk@7809 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/WorkAreaSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/WorkAreaSkin.mxml
@@ -107,6 +107,10 @@
 	<s:HGroup height="20"
 			  left="1" right="1" top="1"
 			  gap="0" paddingRight="20" verticalAlign="middle">
+		<components:WorkAreaButton id="saveButton"
+								   enabled="true" enabled.disabled="false" height="20" icon="@Embed('assets/save.png')"
+								   label="{ resourceManager.getString( 'Events_General', 'work_area_save' ) }"
+								   highlighted="false" highlighted.unsaved="true"/>
 		<components:WorkAreaButton id="redoButton"
 								   height="20"
 								   label="{ resourceManager.getString( 'Events_General', 'work_area_redo' ) }"/>
