--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/AlertWindowSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/AlertWindowSkin.mxml
@@ -1,11 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009" 
 		xmlns:s="library://ns.adobe.com/flex/spark" 
-		xmlns:mx="library://ns.adobe.com/flex/mx" xmlns:components="net.vdombox.components.*" xmlns:button="net.vdombox.ide.common.view.components.button.*">
+		xmlns:mx="library://ns.adobe.com/flex/mx" xmlns:components="net.vdombox.components.*" xmlns:button="net.vdombox.ide.common.view.components.button.*"
+		creationComplete="sparkskin1_creationCompleteHandler(event)">
 	<!-- host component -->
 	<fx:Metadata>
 		[HostComponent("net.vdombox.ide.core.view.components.AlertWindow")]
 	</fx:Metadata>
+	<fx:Script>
+		<![CDATA[
+			import mx.events.FlexEvent;
+			
+			[Embed( source = "assets/Warning.png" )]
+			public var wanted : Class;
+			
+			[Embed( source = "assets/Question.png" )]
+			public var question : Class;
+			
+			protected function sparkskin1_creationCompleteHandler(event:FlexEvent):void
+			{
+				if ( hostComponent.state == "question" )
+				{
+					image.source = question;
+					okButton.visible = true;
+					noButton.label = "No";
+				}
+				else
+				{
+					image.source = wanted;
+					okButton.visible = false;
+				}
+			}
+			
+		]]>
+	</fx:Script>
 	
 	<!-- states -->
 	<s:states>
@@ -13,6 +41,7 @@
 		<s:State name="normalAndInactive" />
 		<s:State name="disabled" />
 		<s:State name="normal" />
+		<s:State name="question" />
 	</s:states>
 	
 	<s:Rect width="100%" height="100%" radiusX="10" radiusY="10">
@@ -39,7 +68,7 @@
 			
 			<s:HGroup width="100%" height="100%" paddingLeft="15" paddingRight="15" paddingTop="10" paddingBottom="10">
 					
-				<mx:Image source="@Embed('assets/Warning.png')" />
+				<mx:Image id="image"/>
 					
 				<s:TextArea text="{hostComponent.content}"
 							width="100%" height="100%" paddingTop="5"
@@ -59,7 +88,9 @@
 				
 			<s:HGroup width="100%" height="100%" horizontalAlign="right" verticalAlign="middle" paddingRight="10">
 				
-				<button:VDOMButton label="Close" click="{hostComponent.close()}"/>
+				<button:VDOMButton id="okButton" label="OK" click="{hostComponent.okClose()}"/>
+				
+				<button:VDOMButton id="noButton" label="Close" click="{hostComponent.noClose()}"/>
 				
 			</s:HGroup>
 				
