--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/skins/TableElementSkin.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/skins/TableElementSkin.mxml
@@ -46,7 +46,7 @@
 			
 			protected function angle_mouseDownHandler(event:MouseEvent):void
 			{
-				hostComponent.mouseDownAngleHandler();
+				hostComponent.mouseDownAngleHandler( event );
 			}
 			
 			protected function textinput1_doubleClickHandler(event:MouseEvent):void
